# breadboard-os

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_options.cmake  main.c  project.cmake  version.h
cli/: CMakeLists.txt  cli_utils.c  cli_utils.h  motd.h  node_bin.c  node_dev.c  node_etc.c  node_lib.c  node_mnt.c  node_net.c  node_proc.c  node_root.c  pinouts.c  shell.c  shell.h  shell_cmd.c
driver_lib/: CMakeLists.txt  bme280.c  device_drivers.c  device_drivers.h  mcp4725.c
hardware/rp2040/: CMakeLists.txt  hardware_config.c  hardware_config.h  hw_adc.c  hw_cores.c  hw_gpio.c  hw_map.c  hw_uart.c  hw_usb.c  hw_versions.c  hw_wifi.c  hw_wifi.h  onboard_led.c  prebuild.cmake  wifi.c  wifi.h
hardware/rp2040/lwip_config/: lwipopts.h
hardware/rp2xxx/: CMakeLists.txt  hardware_config.c  hardware_config.h  hw_clocks.c  hw_net.c  hw_registers.c  hw_reset.c  hw_spi.c  hw_versions.c  hw_watchdog.c  hw_wifi.c  hw_wifi.h  onboard_flash.c  onboard_led.c  prebuild.cmake  rtos_config.h
hardware/rp2xxx/lwip_config/: lwipopts.h
hardware/rp2xxx/net_inc/: hw_net.h  hw_wifi.h  lwipopts.h
hardware/rp2xxx/net_inc/httpd_content/: 404.html  index.shtml  test.shtml
hardware_pico/: hw_i2c.c  hw_reset.c
include/: bbos.h
littlefs/: CMakeLists.txt
rtos/: CMakeLists.txt  FreeRTOSConfig.h  rtos_utils.c  rtos_utils.h
services/: CMakeLists.txt  cli_service.c  heartbeat_service.c  netman_service.c  service_queues.c  service_queues.h  services.c  services.h  storman_service.c  taskman_service.c  usb_service.c  watchdog_service.c  wifi_service.c
